modal no pc e mobile finalizados

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             </div>
                             <div class="modal-body">
                                 <p>
-                                    As informações corporativas estão cada vez mais digitalizadas e online, por isso as empresas devem se prevenir contra a perda de informações importantes. Com essa solução você ajuda a proteger os arquivos que a sua empresa precisa e os restaura rapidamente após uma falha do sistema ou perda de dados.
+                                    As informações corporativas estão cada vez mais digitalizadas e online, por isso as empresas devem se prevenir contra a perda de informações importantes. Com essa solução você ajuda a <strong>proteger os arquivos que a sua empresa precisa</strong> e os restaura rapidamente após uma falha do sistema ou perda de dados.
                                 </p>
                                 <p>
                                     O Bistec Cloud é a solução ideal de backup em nuvem, seguro e elástico, sem custos de investimentos em infraestrutura e de acordo com o Regulamento Geral de Proteção de Dados (GDPR).
@@ -166,7 +166,7 @@
                             </div>
                             <div class="modal-body">
                                 <p>
-                                    Constantemente, a implementação de um software de gestão acaba por falhar, porque não é dada a atenção necessária a esse profissional que utilizará a ferramenta no dia-a-dia. Para evitar este tipo de situação, o Bistec Edu fornece formação para toda a sua equipa explorar 100% da capacidade das soluções adquiridas.
+                                    Constantemente, a implementação de um software de gestão acaba por falhar, porque não é dada a atenção necessária a esse profissional que utilizará a ferramenta no dia-a-dia. Para evitar este tipo de situação, <strong>o Bistec Edu fornece formação para toda a sua equipa</strong> explorar 100% da capacidade das soluções adquiridas.
                                 </p>
                                 <p>
                                     Temos profissionais com mais de 25 anos de experiência académica e educadores certificados do Google nível 1.
@@ -204,7 +204,7 @@
                                 A GDPR (General Data Protection Regulation) 2016/679 é um regulamento da legislação europeia sobre privacidade e proteção de dados pessoais, aplicável a todos os indivíduos da União Europeia e do Espaço Económico Europeu que foi implementado em 2018.
                             </p>
                             <p>
-                                A GDPR define multas, sanções e processos cível aos controladores e operadores que não cumpram as suas bases legais, de acordo com o tipo de evento e gravidade.
+                                A GDPR define <strong>multas, sanções e processos cível aos controladores e operadores que não cumpram as suas bases legais</strong>, de acordo com o tipo de evento e gravidade.
                             </p>
                         </div>
                         <div class="modal-footer">
@@ -234,7 +234,7 @@
                             </div>
                             <div class="modal-body">
                                 <p>
-                                    Por uma mensalidade, a sua empresa pode contar com suporte técnico telefónico e online, bem como visitas técnicas preventivas e corretivas. Realizamos a manutenção periódica e resolvemos problemas mais graves, sejam eles equipamentos ou software, com o serviço dos nossos técnicos, treinados para servir a sua empresa de forma rápida e eficaz.
+                                    Por uma mensalidade, a sua empresa pode contar com <strong>suporte técnico telefónico e online, bem como visitas técnicas preventivas e corretivas.</strong> Realizamos a manutenção periódica e resolvemos problemas mais graves, sejam eles equipamentos ou software, com o serviço dos nossos técnicos, treinados para servir a sua empresa de forma rápida e eficaz.
                                 </p>
                                 <p>
                                     Ao contratar os nossos serviços e optar pelo atendimento de final de semana e feriados, a sua empresa não fica na mão quando você mais precisa.
@@ -267,7 +267,7 @@
                             </div>
                             <div class="modal-body">
                                 <p>
-                                    Mantenha a sua liquidez adquirindo os sistemas de gestão e TI através da locação de equipamentos. Esta solução permite que você preserve as suas linhas de crédito junto aos bancos e assim faça um investimento rentável durante o ciclo de vida dos seus equipamentos, assim melhorando a sua classificação de crédito.
+                                    Mantenha a sua liquidez adquirindo os sistemas de gestão e TI através da locação de equipamentos. Esta solução permite que você  <strong>preserve as suas linhas de crédito junto aos bancos</strong> e assim faça um investimento rentável durante o ciclo de vida dos seus equipamentos, assim melhorando a sua classificação de crédito.
                                 </p>
                                 <p>
                                     Tenha acesso à tecnologia de ponta e, quando o contrato acabar, você pode fazer upgrade nos equipamentos.
@@ -301,22 +301,22 @@
                             <div class="modal-body">
                                 <h3>Crie já o seu site institucional conosco!</h3>
                                 <p>
-                                    Tenha um site institucional (www.nomedaminhaempresa.com.br) hospedado em servidor com alta disponibilidade e contas de e-mail profissionais para sua empresa (contato@nomedaminhaempresa.com.br).
+                                    Tenha um site institucional hospedado em servidor com alta disponibilidade e contas de e-mail profissionais para sua empresa .
                                 </p>
                                 <p>Contrate agora e obtenha:</p>
                                 <ul>
-                                    <li>1 site com domínio .com.br</li>
-                                    <li>100 GB de armazenamento</li>
-                                    <li>SSL Grátis</li>
-                                    <li>Contas de e-mail ilimitadas</li>
+                                    <li> - 1 site com domínio .com.br</li>
+                                    <li> - 100 GB de armazenamento</li>
+                                    <li> - SSL Grátis</li>
+                                    <li> - Contas de e-mail ilimitadas</li>
                                 </ul>
                                 <p>Possuímos também outras soluções para diversos segmentos, como:</p>
                                 <ul>
-                                    <li>Desenvolvimento de e-commerce + domínio + hospedagem + manutenção + suporte;</li>
-                                    <li>Solução de chat online para sites. Clique <a href="https://www.jivochat.com.br/?partner_id=23677&amp;pricelist_id=114&amp;lang=pt" target="_blank" rel="noopener noreferrer"><strong>aqui</strong></a> e teste por 14 dias</li>
-                                    <li>Software de roteirização (logística)</li>
-                                    <li>Antivírus</li>
-                                    <li>Realidade Aumentada</li>
+                                    <li> - Desenvolvimento de e-commerce + domínio + hospedagem + manutenção + suporte;</li>
+                                    <li> - Solução de chat online para sites; <!-- Clique <a href="https://www.jivochat.com.br/?partner_id=23677&amp;pricelist_id=114&amp;lang=pt" target="_blank" rel="noopener noreferrer"><strong>aqui</strong></a> e teste por 14 dias --></li>
+                                    <li> - Software de roteirização (logística);</li>
+                                    <li> - Antivírus;</li>
+                                    <li> - Realidade Aumentada.</li>
                                 </ul>                               
                             </div>
                             <div class="modal-footer">
@@ -366,7 +366,7 @@
                 </div>
         </section>
 
-        <section class="bistec-produtos" id="bistec-msp">
+        <section class="bistec-produtos" id="bistec-wifi">
             <img src="assets/images/img-lg-bistec-wifi.png" alt="Bistec wifi">
             <div class="texto-produtos">
                 <h2>Conheça a nossa solução WAAS: Wi-Fi as a service.</h2>
@@ -390,10 +390,10 @@
                                 Esta solução é tudo que a sua empresa precisa para ter uma rede wi-fi com alto desempenho e qualidade, assim obtendo uma ótima experiência de navegação. Temos soluções para projetos de baixa e média complexidade:
                             </p>
                             <ul>
-                                <li>Gerenciamento Cloud;</li>
-                                <li>Login Social – Liberado por meio do check-in nas principais redes sociais, Linkedin, Facebook, Instagram, etc;</li>
-                                <li>Splash Pages – Anúncios e propagandas;</li>
-                                <li>Dashboard Analytics.</li>
+                                <li> - Gerenciamento Cloud;</li>
+                                <li> - Splash Pages – Anúncios e propagandas;</li>
+                                <li> - Dashboard Analytics.</li>
+                                <li> - Login Social – Liberado por meio do check-in nas principais redes sociais, Linkedin, Facebook, Instagram, etc;</li>
                             </ul>
                         </div>
                         <div class="modal-footer">
