att elementos responsivos na tv, tablet e mobile

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 
         <div class="contacts">
             <div class="contact item1">
-                <a href="#first_section" id="contacts_section">
+                <a href="#contacts_section" id="contacts_section">
                     <img src="assets/images/portugal.png" alt="Portugal País"> Bistec Portugal
                 </a>
                 <p><a href="tel:+351 308 807 114">+351 308 807 114</a></p>
