--- a/index.html
+++ b/index.html
@@ -463,5 +463,6 @@
 
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
     <script src="./assets/js/main.js"></script>
+    <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script>
 </body>
 </html>
