atualização tab redes sociais footer

--- a/index.html
+++ b/index.html
@@ -411,15 +411,15 @@
 
     <footer>
         <div class="redes-sociais">
-            <ion-icon name="mail" class="ionspecial" onclick="email()" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-facebook" onclick="link('facebook.com/bistecweb')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-instagram" onclick="link('instagram.com/bistecweb')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-youtube" onclick="link('youtube.com/bistecweb')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-twitter" onclick="link('twitter.com/bistecweb')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-flickr" onclick="link('flickr.com/bistec')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-soundcloud" onclick="link('soundcloud.com/bistecweb')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-linkedin" onclick="link('br.linkedin.com/company/bistec')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="location" class="ionspecial" onclick="link('google.com/maps/dir/bistec')" onkeypress="teste()"></ion-icon>
+            <a href="#contacts_section"><ion-icon name="mail" class="ionspecial" onclick="email()" onkeypress="teste()"></ion-icon></a>
+            <a href="https://facebook.com/bistecweb"><ion-icon name="logo-facebook" onclick="link('facebook.com/bistecweb')" onkeypress="teste()"></ion-icon></a>
+            <a href="https://instagram.com/bistecweb"><ion-icon name="logo-instagram" onclick="link('instagram.com/bistecweb')" onkeypress="teste()"></ion-icon></a>
+            <a href="https://youtube.com/bistecweb"><ion-icon name="logo-youtube" onclick="link('youtube.com/bistecweb')" onkeypress="teste()"></ion-icon></a>
+            <a href="https://www.twitter.com/bistecweb"><ion-icon name="logo-twitter" onclick="link('twitter.com/bistecweb')" onkeypress="teste()"></ion-icon></a>
+            <a href="https://www.flickr.com/bistec"><ion-icon name="logo-flickr" onclick="link('flickr.com/bistec')" onkeypress="teste()"></ion-icon></a>
+            <a href="https://soundcloud.com/bistecweb"><ion-icon name="logo-soundcloud" onclick="link('soundcloud.com/bistecweb')" onkeypress="teste()"></ion-icon></a>
+            <a href="https://linkedin.com/company/bistec"><ion-icon name="logo-linkedin" onclick="link('br.linkedin.com/company/bistec')" onkeypress="teste()"></ion-icon></a>
+            <a href="https://google.com/maps/dir/bistec"><ion-icon name="location" class="ionspecial" onclick="link('google.com/maps/dir/bistec')" onkeypress="teste()"></ion-icon></a>
         </div>
 
         <div class="contacts">
