troca button por div para tirar duplicidade no tab

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
                 </li>
                 <li><!--Butão de Loja-->
                     <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
-                        <button type="button" class="button" >
+                        <div type="button" class="button" >
                             <span class="button_icon"><ion-icon name="cart-outline"></ion-icon></span>
                             <span class="button_text">LOJA</span>
-                        </button>
+                        </div>
                     </a>
                 </li>
                 <li><!--Botão Suporte-->
                     <a href="https://www.bistec.com.br/suporte/" target="_blank">
-                        <button type="button" class="button_support">
+                        <div type="button" class="button_support">
                             <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
                             <span class="button_text">SUPORTE</span>
-                        </button>
+                        </div>
                     </a>
                 </li>
             </ul>
