--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </ul>
             <ul class="menu-cell">
                 <li>
-                    <ion-icon name="menu-outline" onkeypress="teste()" onclick="menuResponsive()"></ion-icon>                  
+                    <ion-icon name="menu-outline"></ion-icon>                  
                 </li>
             </ul>
     </header>
