--- a/index.html
+++ b/index.html
@@ -411,15 +411,15 @@
 
     <footer>
         <div class="redes-sociais">
-            <ion-icon name="mail" class="ionspecial" onclick="email()" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-facebook" onclick="link('facebook.com/bistecweb')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-instagram" onclick="link('instagram.com/bistecweb')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-youtube" onclick="link('youtube.com/bistecweb')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-twitter" onclick="link('twitter.com/bistecweb')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-flickr" onclick="link('flickr.com/bistec')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-soundcloud" onclick="link('soundcloud.com/bistecweb')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="logo-linkedin" onclick="link('br.linkedin.com/company/bistec')" onkeypress="teste()"></ion-icon>
-            <ion-icon name="location" class="ionspecial" onclick="link('google.com/maps/dir/bistec')" onkeypress="teste()"></ion-icon>
+            <ion-icon name="mail" class="ionspecial"></ion-icon>
+            <ion-icon name="logo-facebook"></ion-icon>
+            <ion-icon name="logo-instagram"></ion-icon>
+            <ion-icon name="logo-youtube"></ion-icon>
+            <ion-icon name="logo-twitter"></ion-icon>
+            <ion-icon name="logo-flickr"></ion-icon>
+            <ion-icon name="logo-soundcloud"></ion-icon>
+            <ion-icon name="logo-linkedin"></ion-icon>
+            <ion-icon name="location" class="ionspecial"></ion-icon>
         </div>
 
         <div class="contacts">
