página de suporte pro pc feita

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#first_section" class=" normal">HOME</a>
                 </li>
                 <li><!--Portifólio-->
-                    <a href="#bistec-automaçao" class=" normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
+                    <a href="#bistec-automaçao" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
                     <ul class="normal-submenu">
                         <li><a href="#bistec-automaçao"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
                         <li><a href="#bistec-cloud"> <ion-icon name="cloud-done-sharp"></ion-icon> BISTEC CLOUD</a></li>
@@ -411,7 +411,7 @@
 
     <footer>
         <div class="redes-sociais">
-            <a href="#contacts_section"><ion-icon name="mail" class="ionspecial" onclick="email()" onkeypress="teste()"></ion-icon></a>
+            <a href="mailto:bistec@bistec.com.br"><ion-icon name="mail" class="ionspecial" onclick="email()" onkeypress="teste()"></ion-icon></a>
             <a href="https://facebook.com/bistecweb"><ion-icon name="logo-facebook" onclick="link('facebook.com/bistecweb')" onkeypress="teste()"></ion-icon></a>
             <a href="https://instagram.com/bistecweb"><ion-icon name="logo-instagram" onclick="link('instagram.com/bistecweb')" onkeypress="teste()"></ion-icon></a>
             <a href="https://youtube.com/bistecweb"><ion-icon name="logo-youtube" onclick="link('youtube.com/bistecweb')" onkeypress="teste()"></ion-icon></a>
