página de suporte feita e algumas mudanças no header e modal

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <!-- cabeçalho -->
 
     <header class="header-bistec">
-            <a href="#first_section" class="logo-bistec">
+            <a href="index.html" class="logo-bistec">
                 <img src="assets/images/logo-bistec.png" alt="Logo - Bistec">
             </a>
             <ul class="normal-menu">
                 <li>
-                    <a href="#first_section" class=" normal">HOME</a>
+                    <a href="index.html" class=" normal" >HOME</a>
                 </li>
                 <li><!--Portifólio-->
                     <a href="#bistec-automaçao" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
@@ -49,7 +49,7 @@
                     </a>
                 </li>
                 <li><!--Botão Suporte-->
-                    <a href="https://www.bistec.com.br/suporte/" target="_blank">
+                    <a href="suporte.html" target="_blank">
                         <button type="button" class="button_support">
                             <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
                             <span class="button_text">SUPORTE</span>
