--- a/suporte.html
+++ b/suporte.html
@@ -22,7 +22,7 @@
             </a>
             <ul class="normal-menu">
                 <li>
-                    <a href="#first_section" class=" normal">HOME</a>
+                    <a href="index.html" class=" normal">HOME</a>
                 </li>
                 <li><!--Portifólio-->
                     <a href="#bistec-automaçao" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
@@ -50,7 +50,7 @@
                     </a>
                 </li>
                 <li><!--Botão Suporte-->
-                    <a href="https://www.bistec.com.br/suporte/" target="_blank">
+                    <a href="suporte.html" target="_blank">
                         <button type="button" class="button_support">
                             <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
                             <span class="button_text">SUPORTE</span>
