botão modal att

--- a/suporte.html
+++ b/suporte.html
@@ -17,14 +17,14 @@
     <!-- cabeçalho -->
 
     <header class="header-bistec">
-            <a href="#first_section" class="logo-bistec">
+            <a href="index.html" class="logo-bistec">
                 <img src="assets/images/logo-bistec.png" alt="Logo - Bistec">
             </a>
             <ul class="normal-menu">
                 <li>
                     <a href="index.html" class=" normal">HOME</a>
                 </li>
-                <li><!--Portifólio-->
+                <li class="portfolio_support"><!--Portifólio-->
                     <a href="#bistec-automaçao" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
                     <ul class="normal-submenu">
                         <li><a href="#bistec-automaçao"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
@@ -50,7 +50,7 @@
                     </a>
                 </li>
                 <li><!--Botão Suporte-->
-                    <a href="suporte.html" target="_blank">
+                    <a href="suporte.html">
                         <button type="button" class="button_support">
                             <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
                             <span class="button_text">SUPORTE</span>
