--- a/suporte.html
+++ b/suporte.html
@@ -17,53 +17,53 @@
     <!-- cabeçalho -->
 
     <header class="header-bistec">
-            <a href="index.html" class="logo-bistec">
-                <img src="assets/images/logo-bistec.png" alt="Logo - Bistec">
-            </a>
-            <ul class="normal-menu">
-                <li>
-                    <a href="index.html" class=" normal">HOME</a>
-                </li>
-                <li class="portfolio_support"><!--Portifólio-->
-                    <a href="#bistec-automaçao" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
-                    <ul class="normal-submenu">
-                        <li><a href="#bistec-automaçao"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
-                        <li><a href="#bistec-cloud"> <ion-icon name="cloud-done-sharp"></ion-icon> BISTEC CLOUD</a></li>
-                        <li><a href="#bistec-edu"> <ion-icon name="pencil-sharp"></ion-icon> BISTEC EDU</a></li>
-                        <li><a href="#bistec-gpdr"><ion-icon name="shield-checkmark-sharp"></ion-icon> BISTEC GDPR</a></li>
-                        <li><a href="#bistec-msp"> <ion-icon name="lock-closed"></ion-icon> BISTEC MSP</a></li>
-                        <li><a href="#bistec-outsourcing"> <ion-icon name="settings-sharp"></ion-icon> BISTEC OUTSOURCING</a></li>
-                        <li><a href="#bistec-renting"> <ion-icon name="reload-circle-sharp"></ion-icon> BISTEC RENTING</a></li>
-                        <li><a href="#bistec-soft"><ion-icon name="disc-sharp"></ion-icon> BISTEC SOFT</a></li>
-                        <li><a href="#bistec-wifi"> <ion-icon name="wifi-sharp"></ion-icon> BISTEC WIFI</a></li>
-                    </ul> 
-                </li>
-                <li>
-                    <a href="#contacts_section" class=" normal">CONTATO</a>
-                </li>
-                <li><!--Butão de Loja-->
-                    <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
-                        <button type="button" class="button" >
-                            <span class="button_icon"><ion-icon name="cart-outline"></ion-icon></span>
-                            <span class="button_text">LOJA</span>
-                        </button>
-                    </a>
-                </li>
-                <li><!--Botão Suporte-->
-                    <a href="suporte.html">
-                        <button type="button" class="button_support">
-                            <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
-                            <span class="button_text">SUPORTE</span>
-                        </button>
-                    </a>
-                </li>
-            </ul>
-            <ul class="menu-cell">
-                <li>
-                    <ion-icon name="menu-outline" onkeypress="teste()" onclick="menuResponsive()"></ion-icon>                  
-                </li>
-            </ul>
-    </header>
+        <a href="index.html" class="logo-bistec">
+            <img src="assets/images/logo-bistec.png" alt="Logo - Bistec">
+        </a>
+        <ul class="normal-menu">
+            <li>
+                <a href="index.html" class=" normal" >HOME</a>
+            </li>
+            <li><!--Portifólio-->
+                <a href="suporte.html" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
+                <ul class="normal-submenu">
+                    <li><a href="#bistec-automaçao"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
+                    <li><a href="#bistec-cloud"> <ion-icon name="cloud-done-sharp"></ion-icon> BISTEC CLOUD</a></li>
+                    <li><a href="#bistec-edu"> <ion-icon name="pencil-sharp"></ion-icon> BISTEC EDU</a></li>
+                    <li><a href="#bistec-gpdr"><ion-icon name="shield-checkmark-sharp"></ion-icon> BISTEC GDPR</a></li>
+                    <li><a href="#bistec-msp"> <ion-icon name="lock-closed"></ion-icon> BISTEC MSP</a></li>
+                    <li><a href="#bistec-outsourcing"> <ion-icon name="settings-sharp"></ion-icon> BISTEC OUTSOURCING</a></li>
+                    <li><a href="#bistec-renting"> <ion-icon name="reload-circle-sharp"></ion-icon> BISTEC RENTING</a></li>
+                    <li><a href="#bistec-soft"><ion-icon name="disc-sharp"></ion-icon> BISTEC SOFT</a></li>
+                    <li><a href="#bistec-wifi"> <ion-icon name="wifi-sharp"></ion-icon> BISTEC WIFI</a></li>
+                </ul> 
+            </li>
+            <li>
+                <a href="#contacts_section" class=" normal">CONTATO</a>
+            </li>
+            <li><!--Butão de Loja-->
+                <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
+                    <div type="button" class="button" >
+                        <span class="button_icon"><ion-icon name="cart-outline"></ion-icon></span>
+                        <span class="button_text">LOJA</span>
+                    </div>
+                </a>
+            </li>
+            <li><!--Botão Suporte-->
+                <a href="suporte.html" target="_blank">
+                    <div type="button" class="button_support">
+                        <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
+                        <span class="button_text">SUPORTE</span>
+                    </div>
+                </a>
+            </li>
+        </ul>
+        <ul class="menu-cell">
+            <li>
+                <ion-icon name="menu-outline"></ion-icon>                  
+            </li>
+        </ul>
+</header>
 
     <!-- CORPO -->
     <article id="first_section">
@@ -74,31 +74,31 @@
             <p>Helpdesk on-line aberto de <strong>segunda à sexta</strong>, das <strong>8:15h às 18:00h.</strong></p>
             <p>Caso sua empresa não seja parceira ainda, fale conosco!</p>
             <p>Faça Download do Anydesk!</p>
-            <button class="bt-dialog-anydesk">
+            <div class="bt-dialog-anydesk">
                 <a href="https://download.anydesk.com/AnyDesk.exe" class="button_text">DOWNLOAD ANYDESK</a>                   
-            </button>
+            </div>
 
             <p>Faça Download do TeamViewer!</p>
-            <button class="bt-dialog-teamviewer">
+            <div class="bt-dialog-teamviewer">
                 <a href="http://download.teamviewer.com/download/TeamViewerQS_pt.exe" class="button_text">DOWNLOAD TEAMVIEWER</a>                   
-            </button>
+            </div>
 
-            <p>Fale conosco também pelo <strong><a class="suporte-wpp" href="https://api.whatsapp.com/send?phone=5513992101945">WhatsApp Business no +55 13 4042-0777</a></strong> ou pelo <strong><a href="https://t.me/BISTEC_BOT" class="suporte-telegram">Telegram – Procure por Atendimento BISTEC.</a></strong> </p>
+            <p>Fale conosco também pelo <strong><a class="suporte-wpp" href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank">WhatsApp Business no +55 13 4042-0777</a></strong> ou pelo <strong><a href="https://t.me/BISTEC_BOT" target="_blank" class="suporte-telegram">Telegram – Procure por Atendimento BISTEC.</a></strong> </p>
         </section>
 
     <!-- rodapé -->
 
     <footer>
         <div class="redes-sociais">
-            <a href="mailto:bistec@bistec.com.br"><ion-icon name="mail" class="ionspecial" onclick="email()" onkeypress="teste()"></ion-icon></a>
-            <a href="https://facebook.com/bistecweb"><ion-icon name="logo-facebook" onclick="link('facebook.com/bistecweb')" onkeypress="teste()"></ion-icon></a>
-            <a href="https://instagram.com/bistecweb"><ion-icon name="logo-instagram" onclick="link('instagram.com/bistecweb')" onkeypress="teste()"></ion-icon></a>
-            <a href="https://youtube.com/bistecweb"><ion-icon name="logo-youtube" onclick="link('youtube.com/bistecweb')" onkeypress="teste()"></ion-icon></a>
-            <a href="https://www.twitter.com/bistecweb"><ion-icon name="logo-twitter" onclick="link('twitter.com/bistecweb')" onkeypress="teste()"></ion-icon></a>
-            <a href="https://www.flickr.com/bistec"><ion-icon name="logo-flickr" onclick="link('flickr.com/bistec')" onkeypress="teste()"></ion-icon></a>
-            <a href="https://soundcloud.com/bistecweb"><ion-icon name="logo-soundcloud" onclick="link('soundcloud.com/bistecweb')" onkeypress="teste()"></ion-icon></a>
-            <a href="https://linkedin.com/company/bistec"><ion-icon name="logo-linkedin" onclick="link('br.linkedin.com/company/bistec')" onkeypress="teste()"></ion-icon></a>
-            <a href="https://google.com/maps/dir/bistec"><ion-icon name="location" class="ionspecial" onclick="link('google.com/maps/dir/bistec')" onkeypress="teste()"></ion-icon></a>
+            <a href="mailto:bistec@bistec.com.br" target="_blank"><ion-icon name="mail" class="ionspecial"></ion-icon></a>
+            <a href="https://facebook.com/bistecweb" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
+            <a href="https://instagram.com/bistecweb" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+            <a href="https://youtube.com/bistecweb" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
+            <a href="https://www.twitter.com/bistecweb" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
+            <a href="https://www.flickr.com/bistec" target="_blank"><ion-icon name="logo-flickr"></ion-icon></a>
+            <a href="https://soundcloud.com/bistecweb" target="_blank"><ion-icon name="logo-soundcloud"></ion-icon></a>
+            <a href="https://linkedin.com/company/bistec" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+            <a href="https://google.com/maps/dir/bistec" target="_blank"><ion-icon name="location" class="ionspecial"></ion-icon></a>
         </div>
 
         <div class="contacts">
