correções do gustavo, falta pg contato com formulário

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                         <li><a href="#bistec-cloud"> <ion-icon name="cloud-done-sharp"></ion-icon> BISTEC CLOUD</a></li>
                         <li><a href="#bistec-edu"> <ion-icon name="pencil-sharp"></ion-icon> BISTEC EDU</a></li>
                         <li><a href="#bistec-gpdr"><ion-icon name="shield-checkmark-sharp"></ion-icon> BISTEC GDPR</a></li>
-                        <li><a href="#bistec-msp"> <ion-icon name="lock-closed"></ion-icon> BISTEC MSP</a></li>
                         <li><a href="#bistec-outsourcing"> <ion-icon name="settings-sharp"></ion-icon> BISTEC OUTSOURCING</a></li>
                         <li><a href="#bistec-renting"> <ion-icon name="reload-circle-sharp"></ion-icon> BISTEC RENTING</a></li>
                         <li><a href="#bistec-soft"><ion-icon name="disc-sharp"></ion-icon> BISTEC SOFT</a></li>
+                        <li><a href="#bistec-msp"> <ion-icon name="lock-closed"></ion-icon> BISTEC MSP</a></li>
                         <li><a href="#bistec-wifi"> <ion-icon name="wifi-sharp"></ion-icon> BISTEC WIFI</a></li>
                     </ul> 
                 </li>
@@ -49,7 +49,7 @@
                     </a>
                 </li>
                 <li><!--Botão Suporte-->
-                    <a href="suporte.html" target="_blank">
+                    <a href="suporte.html">
                         <div type="button" class="button_support">
                             <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
                             <span class="button_text">SUPORTE</span>
