--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
                 <li><!--Portifólio-->
                     <a href="#bistec-automaçao" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
                     <ul class="normal-submenu">
-                        <li><a href="#bistec-automaçao"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
-                        <li><a href="#bistec-cloud"> <ion-icon name="cloud-done-sharp"></ion-icon> BISTEC CLOUD</a></li>
-                        <li><a href="#bistec-edu"> <ion-icon name="pencil-sharp"></ion-icon> BISTEC EDU</a></li>
-                        <li><a href="#bistec-gpdr"><ion-icon name="shield-checkmark-sharp"></ion-icon> BISTEC GDPR</a></li>
-                        <li><a href="#bistec-msp"> <ion-icon name="lock-closed"></ion-icon> BISTEC MSP</a></li>
-                        <li><a href="#bistec-outsourcing"> <ion-icon name="settings-sharp"></ion-icon> BISTEC OUTSOURCING</a></li>
-                        <li><a href="#bistec-renting"> <ion-icon name="reload-circle-sharp"></ion-icon> BISTEC RENTING</a></li>
-                        <li><a href="#bistec-soft"><ion-icon name="disc-sharp"></ion-icon> BISTEC SOFT</a></li>
-                        <li><a href="#bistec-wifi"> <ion-icon name="wifi-sharp"></ion-icon> BISTEC WIFI</a></li>
+                        <li><a href="produtos/automaçao.html"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
+                        <li><a href="produtos/cloud.html"> <ion-icon name="cloud-done-sharp"></ion-icon> BISTEC CLOUD</a></li>
+                        <li><a href="produtos/edu.html"> <ion-icon name="pencil-sharp"></ion-icon> BISTEC EDU</a></li>
+                        <li><a href="produtos/gdpr.html"><ion-icon name="shield-checkmark-sharp"></ion-icon> BISTEC GDPR</a></li>
+                        <li><a href="produtos/msp.html"> <ion-icon name="lock-closed"></ion-icon> BISTEC MSP</a></li>
+                        <li><a href="produtos/outsourcing.html"> <ion-icon name="settings-sharp"></ion-icon> BISTEC OUTSOURCING</a></li>
+                        <li><a href="produtos/renting.html"> <ion-icon name="reload-circle-sharp"></ion-icon> BISTEC RENTING</a></li>
+                        <li><a href="produtos/soft.html"><ion-icon name="disc-sharp"></ion-icon> BISTEC SOFT</a></li>
+                        <li><a href="produtos/wifi.html"> <ion-icon name="wifi-sharp"></ion-icon> BISTEC WIFI</a></li>
                     </ul> 
                 </li>
                 <li>
