Formulário funcionando apenas com HTML, pelo site formsubmit.co

--- a/contato.html
+++ b/contato.html
@@ -70,13 +70,13 @@
 
     <!-- CORPO -->
     <article>
-        <form action="/" method="post" id="formContato">
+        <form action="https://formsubmit.co/0e7f2fce85bd2065e42938316ca03ac1" method="POST" id="formContato">
             <input type="text" name="nome" placeholder="Nome Completo">
-            <input type="email" name="addEmail" placeholder="exemplo@exemplo.com">
+            <input type="email" name="email-cliente" placeholder="exemplo@exemplo.com">
             <input type="text" name="assunto" placeholder="Assunto">
             <input type="text" name="conteudo" placeholder="Deixe seu comentáio">
             <button type="submit">Enviar</button>
-        </form>
+       </form>
     </article>
     <!-- rodapé -->
 
