--- a/produtos/outsourcing.html
+++ b/produtos/outsourcing.html
@@ -17,7 +17,7 @@
     <!-- cabeçalho -->
 
     <header class="header-bistec">
-            <a href="index.html" class="logo-bistec">
+            <a href="../index.html" class="logo-bistec">
                 <img src="../assets/images/logo-bistec.png" alt="Logo - Bistec">
             </a>
             <ul class="normal-menu">
@@ -86,7 +86,7 @@
 
     <!-- texto produto -->
     <div class="produto-texto">
-        <h1>Bistec Edu</h1>
+        <h1>Bistec Outsourcing</h1>
         <p>
             A Bistec, consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas.
         </p>
