--- a/produtos/renting.html
+++ b/produtos/renting.html
@@ -17,7 +17,7 @@
     <!-- cabeçalho -->
 
     <header class="header-bistec">
-            <a href="index.html" class="logo-bistec">
+            <a href="../index.html" class="logo-bistec">
                 <img src="../assets/images/logo-bistec.png" alt="Logo - Bistec">
             </a>
             <ul class="normal-menu">
@@ -86,21 +86,37 @@
 
     <!-- texto produto -->
     <div class="produto-texto">
-        <h1>Bistec Edu</h1>
+        <h1>Bistec Renting</h1>
         <p>
-            A Bistec, consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas.
+            Mantenha a sua liquidez adquirindo os sistemas de gestão e TI através da locação de equipamentos.
         </p>
         <p>
-            Adquira conosco a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes e esteja em dia com a legislação fiscal. Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, relógios de pontos digitais, computadores, etc. Temos também softwares para a automação comercial da sua empresa.
+            Esta solução permite que você preserve as suas linhas de crédito junto aos bancos e assim faça um investimento rentável durante o ciclo de vida dos seus equipamentos, assim melhorando a sua classificação de crédito.
         </p>
-
         <p>
-            Elimine falhas de controle operacional com os relógios de pontos digitais. Com o modelo móvel o controle de ponto dos funcionários pode ser realizado onde eles estiverem.
+            Tenha acesso à tecnologia de ponta e, quando o contrato acabar, você pode fazer upgrade nos equipamentos.
         </p>
-
+        
         <p>
-            Agora, se você esta procurando a melhor solução para gestão da sua empresa, <a target="_blank" href="https://hiper.com.br/experimente-gratis/?HCode=BIS01625">clique aqui e Experimente grátis por 7 dias!</a>
-        </p>
+            <h4>
+                Benefícios de você trabalhar com o Bistec Renting:
+            </h4>
+    <br>
+            <ul>
+                <li>- Não descapitaliza a empresa</li>
+                <li>- Incentivos fiscais </li>
+                <li>- Parcelas Fixas </li>
+                <li>- Equipamentos sempre Atualizados</li>
+                <li>- Maior Eficiência em TI</li>
+                <li>- Locação 100% sem entrada</li>
+            </ul>
+        </p> <!--
+        <p class="link_renting">
+            <a link_renting href="https://api.whatsapp.com/send?phone=5513992101945">Entre em contato conosco para saber mais</a>
+        </p>    -->
+        <p>
+            <a class="nice_button" target="_blank" href="https://api.whatsapp.com/send?phone=5513992101945">ENTRE EM CONTATO</a>
+        </p>   
     </div>
 
     <!-- rodapé -->
