--- a/suporte.html
+++ b/suporte.html
@@ -71,7 +71,7 @@
         <section class="bistec-suporte">
             <h1>Suporte Técnico</h1>
             <p>Este canal é exclusivo para clientes de contrato.</p>
-            <p>Helpdesk on-line aberto de <strong>segunda à sexta</strong>, das <strong>8:15h às 18:00h.</strong></p>
+            <!--<p>Helpdesk on-line aberto de <strong>segunda à sexta</strong>, das <strong>8:15h às 18:00h.</strong></p>-->
             <p>Caso sua empresa não seja parceira ainda, fale conosco!</p>
             <p>Faça Download do Anydesk!</p>
             <div class="bt-dialog-anydesk">
