--- a/produtos/automaçao.html
+++ b/produtos/automaçao.html
@@ -17,12 +17,12 @@
     <!-- cabeçalho -->
 
     <header class="header-bistec">
-            <a href="index.html" class="logo-bistec">
+            <a href="../index.html" class="logo-bistec">
                 <img src="../assets/images/logo-bistec.png" alt="Logo - Bistec">
             </a>
             <ul class="normal-menu">
                 <li>
-                    <a href="index.html" class=" normal" >HOME</a>
+                    <a href="../index.html" class=" normal" >HOME</a>
                 </li>
                 <li><!--Portifólio-->
                     <a href="#bistec-automaçao" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
@@ -99,7 +99,7 @@
         </p>
 
         <p>
-            Agora, se você esta procurando a melhor solução para gestão da sua empresa, <a target="_blank" href="https://hiper.com.br/experimente-gratis/?HCode=BIS01625">clique aqui e Experimente grátis por 7 dias!</a>
+            Agora, se você esta procurando a melhor solução para gestão da sua empresa, <a class="link_automaçao" target="_blank" href="https://hiper.com.br/experimente-gratis/?HCode=BIS01625">clique aqui e Experimente grátis por 7 dias!</a>
         </p>
     </div>
 
