--- a/produtos/gdpr.html
+++ b/produtos/gdpr.html
@@ -17,7 +17,7 @@
     <!-- cabeçalho -->
 
     <header class="header-bistec">
-            <a href="index.html" class="logo-bistec">
+            <a href="../index.html" class="logo-bistec">
                 <img src="../assets/images/logo-bistec.png" alt="Logo - Bistec">
             </a>
             <ul class="normal-menu">
@@ -88,18 +88,10 @@
     <div class="produto-texto">
         <h1>Bistec GDPR</h1>
         <p>
-            A Bistec, consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas.
+            A GDPR (General Data Protection Regulation) 2016/679 é um regulamento da legislação europeia sobre privacidade e proteção de dados pessoais, aplicável a todos os indivíduos da União Europeia e do Espaço Económico Europeu que foi implementado em 2018.
         </p>
         <p>
-            Adquira conosco a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes e esteja em dia com a legislação fiscal. Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, relógios de pontos digitais, computadores, etc. Temos também softwares para a automação comercial da sua empresa.
-        </p>
-
-        <p>
-            Elimine falhas de controle operacional com os relógios de pontos digitais. Com o modelo móvel o controle de ponto dos funcionários pode ser realizado onde eles estiverem.
-        </p>
-
-        <p>
-            Agora, se você esta procurando a melhor solução para gestão da sua empresa, <a target="_blank" href="https://hiper.com.br/experimente-gratis/?HCode=BIS01625">clique aqui e Experimente grátis por 7 dias!</a>
+            A GDPR define multas, sanções e processos cível aos controladores e operadores que não cumpram as suas bases legais, de acordo com o tipo de evento e gravidade.
         </p>
     </div>
 
