--- a/produtos/msp.html
+++ b/produtos/msp.html
@@ -17,7 +17,7 @@
     <!-- cabeçalho -->
 
     <header class="header-bistec">
-            <a href="index.html" class="logo-bistec">
+            <a href="../index.html" class="logo-bistec">
                 <img src="../assets/images/logo-bistec.png" alt="Logo - Bistec">
             </a>
             <ul class="normal-menu">
@@ -86,20 +86,22 @@
 
     <!-- texto produto -->
     <div class="produto-texto">
-        <h1>Bistec Edu</h1>
+        <h1>Bistec MSP</h1>
         <p>
-            A Bistec, consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas.
+            Quando se trata de atendimento técnico para a sua empresa atualmente existem dois modelos, o break-fix (quebrou-consertou) e o MSP (Provedores de Serviços Gerenciados).
         </p>
         <p>
-            Adquira conosco a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes e esteja em dia com a legislação fiscal. Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, relógios de pontos digitais, computadores, etc. Temos também softwares para a automação comercial da sua empresa.
-        </p>
-
-        <p>
-            Elimine falhas de controle operacional com os relógios de pontos digitais. Com o modelo móvel o controle de ponto dos funcionários pode ser realizado onde eles estiverem.
+            No modelo break-fix o suporte técnico é acionado após o problema acontecer e até que ele seja resolvido você fica com seu equipamento/sistema inoperante.
         </p>
 
         <p>
-            Agora, se você esta procurando a melhor solução para gestão da sua empresa, <a target="_blank" href="https://hiper.com.br/experimente-gratis/?HCode=BIS01625">clique aqui e Experimente grátis por 7 dias!</a>
+            Já no modelo MSP, a Bistec atua ativamente, utilizando ferramentas gerenciais, para analisar em tempo real o que está acontecendo com seu computador e sistemas. Dessa forma é possível sanar seus problemas mesmo que eles aconteçam.
+        </p>
+
+        <p>....</p>
+
+        <p>
+            Ainda restam dúvidas sobre qual solução adquirir? <a class="link_msp" target="_blank" href="https://api.whatsapp.com/send?phone=5513992101945&text=Ol%C3%A1,%20estou%20com%20uma%20d%C3%BAvida%20sobre%20a%20solu%C3%A7%C3%A3o%20Bistec%20MSP">Converse com um de nossos atendentes sobre a solução BISTEC MSP</a>
         </p>
     </div>
 
