--- a/produtos/wifi.html
+++ b/produtos/wifi.html
@@ -17,7 +17,7 @@
     <!-- cabeçalho -->
 
     <header class="header-bistec">
-            <a href="index.html" class="logo-bistec">
+            <a href="../index.html" class="logo-bistec">
                 <img src="../assets/images/logo-bistec.png" alt="Logo - Bistec">
             </a>
             <ul class="normal-menu">
@@ -86,20 +86,15 @@
 
     <!-- texto produto -->
     <div class="produto-texto">
-        <h1>Bistec Edu</h1>
+        <h1>Bistec Wifi</h1>
         <p>
-            A Bistec, consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas.
+            Constantemente, a implementação de um software de gestão acaba por falhar, porque não é dada a atenção necessária a esse profissional que utilizará a ferramenta no dia-a-dia. Para evitar este tipo de situação, <strong>o Bistec Edu fornece formação para toda a sua equipa explorar 100% da capacidade das soluções adquiridas.</strong>
         </p>
         <p>
-            Adquira conosco a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes e esteja em dia com a legislação fiscal. Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, relógios de pontos digitais, computadores, etc. Temos também softwares para a automação comercial da sua empresa.
+            Temos profissionais com mais de 25 anos de experiência académica e educadores certificados do Google nível 1.
         </p>
-
         <p>
-            Elimine falhas de controle operacional com os relógios de pontos digitais. Com o modelo móvel o controle de ponto dos funcionários pode ser realizado onde eles estiverem.
-        </p>
-
-        <p>
-            Agora, se você esta procurando a melhor solução para gestão da sua empresa, <a target="_blank" href="https://hiper.com.br/experimente-gratis/?HCode=BIS01625">clique aqui e Experimente grátis por 7 dias!</a>
+            Acesso aos nossos recursos de aprendizado:
         </p>
     </div>
 
