--- a/contato.html
+++ b/contato.html
@@ -71,11 +71,21 @@
     <!-- CORPO -->
     <article>
         <form action="https://formsubmit.co/0e7f2fce85bd2065e42938316ca03ac1" method="POST" id="formContato">
+            <label id="labelTitulo">Formulário para contato</label>
+            <label for="nome">Nome completo:</label>
             <input type="text" name="nome" placeholder="Nome Completo">
+            <label for="email-cliente">Seu endereço de email:</label>
             <input type="email" name="email-cliente" placeholder="exemplo@exemplo.com">
+            <label for="assunto">Assunto do email:</label>
             <input type="text" name="assunto" placeholder="Assunto">
-            <input type="text" name="conteudo" placeholder="Deixe seu comentáio">
+            <label for="conteudo">Conteúdo:</label>
+            <textarea type="text" name="conteudo" placeholder="Deixe seu comentáio"></textarea>
             <button type="submit">Enviar</button>
+
+            <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_next" value="http://localhost">
+            <input type="text" name="_honey" style="display:none">
+            <input type="hidden" name="_autoresponse" value="Email Recebido">
        </form>
     </article>
     <!-- rodapé -->
