corrige direcionamento para pg contato

--- a/suporte.html
+++ b/suporte.html
@@ -40,7 +40,7 @@
                 </ul> 
             </li>
             <li>
-                <a href="#contacts_section" class="normal">CONTATO</a>
+                <a href="./contato.html" class="normal">CONTATO</a>
             </li>
             <li><!--Butão de Loja-->
                 <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
