--- a/produtos/msp.html
+++ b/produtos/msp.html
@@ -22,7 +22,7 @@
             </a>
             <ul class="normal-menu">
                 <li>
-                    <a href="../index.html" class=" normal" >HOME</a>
+                    <a href="../index.html" class="normal" >HOME</a>
                 </li>
                 <li><!--Portifólio-->
                     <a href="#bistec-automaçao" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
@@ -39,7 +39,7 @@
                     </ul> 
                 </li>
                 <li>
-                    <a href="#contacts_section" class=" normal">CONTATO</a>
+                    <a href="./contato.html" class="normal">CONTATO</a>
                 </li>
                 <li><!--Butão de Loja-->
                     <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
