acessibilidade nota 10 em todos

--- a/produtos/cloud.html
+++ b/produtos/cloud.html
@@ -16,10 +16,10 @@
 <body>
     <!-- cabeçalho -->
 
-    <header class="header-bistec">
-        <a href="../index.html" class="logo-bistec">
-                <img src="../assets/images/logo-bistec.png" alt="Logo - Bistec">
-            </a>
+    <header class="header-bistec" id="#first_section">
+        <a href="#first_section" class="logo-bistec">
+            <img src="../assets/images/logo-bistec.png" alt="Logo - Bistec">
+        </a>
             <ul class="normal-menu">
                 <li>
                     <a href="../index.html" class=" normal" >HOME</a>
