--- a/produtos/edu.html
+++ b/produtos/edu.html
@@ -16,10 +16,10 @@
 <body>
     <!-- cabeçalho -->
 
-    <header class="header-bistec">
-            <a href="../index.html" class="logo-bistec">
-                <img src="../assets/images/logo-bistec.png" alt="Logo - Bistec">
-            </a>
+    <header class="header-bistec" id="#first_section">
+        <a href="#first_section" class="logo-bistec">
+            <img src="../assets/images/logo-bistec.png" alt="Logo - Bistec">
+        </a>
             <ul class="normal-menu">
                 <li>
                     <a href="../index.html" class=" normal" >HOME</a>
@@ -110,7 +110,7 @@
         <h2>
             Acesso aos nossos recursos de aprendizado:
         </h2>
-        
+
         <div class="bistec-edu-plataformas">
             <a href="https://edu.bistec.com.br/ead/login/index.php" target="_blank"><img src="../assets/images/img-lg-bistec-edu.png" alt="Bistec Edu"></a>
             <a href="https://www.youtube.com/c/BISTECEDU" target="_blank"><img src="../assets/images/youtube.png" alt="Canal do YouTube da Bistec Edu"></a>
