--- a/produtos/wifi.html
+++ b/produtos/wifi.html
@@ -16,8 +16,8 @@
 <body>
     <!-- cabeçalho -->
 
-    <header class="header-bistec">
-            <a href="../index.html" class="logo-bistec">
+    <header class="header-bistec" id="#first_section">
+            <a href="#first_section" class="logo-bistec">
                 <img src="../assets/images/logo-bistec.png" alt="Logo - Bistec">
             </a>
             <ul class="normal-menu">
