--- a/suporte.html
+++ b/suporte.html
@@ -15,9 +15,8 @@
 </head>
 <body>
     <!-- cabeçalho -->
-
-    <header class="header-bistec">
-        <a href="index.html" class="logo-bistec">
+    <header class="header-bistec" id="#first_section">
+        <a href="#first_section" class="logo-bistec">
             <img src="assets/images/logo-bistec.png" alt="Logo - Bistec">
         </a>
         <ul class="normal-menu">
@@ -27,7 +26,7 @@
             <!--Portifólio-->
             <!-- REMOVIDO ATÉ CRIAR AS PÁGINAS DOS PRODUTOS -->
             <li>
-                <a href="suporte.html" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
+                <a href="index.html" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
                 <ul class="normal-submenu">
                     <li><a href="produtos/automaçao.html"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
                     <li><a href="produtos/cloud.html"> <ion-icon name="cloud-done-sharp"></ion-icon> BISTEC CLOUD</a></li>
