troca redirecionamento apos enviar email

--- a/contato.html
+++ b/contato.html
@@ -82,7 +82,7 @@
             <button type="submit">Enviar</button>
 
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="http://localhost">
+            <input type="hidden" name="_next" value="http://bistec.com.pt">
             <input type="text" name="_honey" style="display:none">
             <input type="hidden" name="_autoresponse" value="Email Recebido">
        </form>
